--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["saka1029 <saka1029@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 ParserCombinator = "fae87a5f-d1ad-5cf0-8f61-c941e1580b46"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
