--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["saka1029 <saka1029@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 ParserCombinator = "fae87a5f-d1ad-5cf0-8f61-c941e1580b46"
+Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
